# INDE-577-F25

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
.tfenv/: pyvenv.cfg
examples/: README.md
examples/supervised_learning/: README.md
examples/supervised_learning/decision_tree/: README.md  decision_tree.ipynb
examples/supervised_learning/ensemble_methods/: README.md  ensemble_methods.ipynb
examples/supervised_learning/k_nearest_neighbors/: README.md  k_nearest_neighbors.ipynb
examples/supervised_learning/linear_regression/: README.md  linear_regression.ipynb
examples/supervised_learning/logistic_regression/: README.md  logistic_regression.ipynb
examples/supervised_learning/multilayer_perceptron/: README.md  multilayer_perceptron.ipynb
examples/supervised_learning/perceptron/: README.md  perceptron.ipynb
examples/supervised_learning/regression_tree/: README.md  regression_tree.ipynb
examples/unsupervised_learning/: README.md
notebooks/: 2_linear_regression_demo.ipynb  3_neural_network_demo.ipynb  README.md  perceptron_demo.ipynb
src/: README.md
src/rice_ml/: __init__.py  knn.py  linear_regression.py  metrics.py  perceptron.py
src/rice_ml.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_community_detection.py  test_dbscan.py  test_decision_tree.py  test_ensemble_methods.py  test_integration_knn.py  test_k_means_clustering.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_neural_network.py  test_pca.py  test_perceptron.py  test_postprocess.py  test_preprocess.py  test_regression_tree.py
(+25 files in other folders)
