[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_ml"
version = "0.1.0"
description = "My repository for Fall 2025 of Rice CMOR 438 / INDE 577"
authors = [
  { name = "Jonathan Woo", email = "jjw11@rice.edu" },
  { name = "Vikram Shah", email = "vs56@rice.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "seaborn", "pandas", "scikit-learn", "requests"]

[project.optional-dependencies]
dev = ["pytest"]

# >>> These two lines make the src/ layout unambiguous <<<
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]